--- a/scouting-service/dockerfile
+++ b/scouting-service/dockerfile
@@ -1,22 +1,8 @@
-FROM maven:3.9.6-eclipse-temurin-17 AS build
-
+FROM maven:3.9.6-eclipse-temurin-17
 WORKDIR /app
-
-COPY pom.xml .
-
 RUN mvn dependency:go-offline
-
-
-COPY src ./src
-
-
-# Utilise une image Java légère pour l'exécution
 FROM eclipse-temurin:17-jdk-alpine
-
 WORKDIR /app
-
-COPY scouting-service-0.0.1-SNAPSHOT.jar app.jar                                            EXPOSE 8080
-
-
-ENTRYPOINT ["java", "-jar", "app.jar"] explique ligne par ligne  
-
+COPY --from=0 /app/target/scouting-service-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
