--- a/scouting-service/dockerfile
+++ b/scouting-service/dockerfile
@@ -1,5 +1,6 @@
 FROM maven:3.9.6-eclipse-temurin-17
 WORKDIR /app
+COPY . /app
 RUN mvn dependency:go-offline
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
