--- a/scouting-service/dockerfile
+++ b/scouting-service/dockerfile
@@ -1,9 +1,9 @@
-FROM maven:3.9.6-eclipse-temurin-17
+FROM maven:3.9.6-eclipse-temurin-17 as builder
 WORKDIR /app
 COPY . /app
-RUN mvn dependency:go-offline
+RUN mvn dependency:go-offline && mvn clean package
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
-COPY --from=0 /app/target/scouting-service-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=builder /app/target/scouting-service-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
