--- a/scouting-service/.github/workflows/ci-cd.yml
+++ b/scouting-service/.github/workflows/ci-cd.yml
@@ -1,74 +1,72 @@
-name: Spring Boot CI/CD Pipeline with Docker Compose
+name: Java CI
 
 on:
   push:
-    branches:
-      - main  # Le workflow sera déclenché lors d'un push sur la branche 'main'
+    branches: [ main ]
   pull_request:
-    branches:
-      - main  # Le workflow sera également déclenché lors d'une PR vers 'main'
+    branches: [ main ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest  # Utilise un environnement Ubuntu
+  test_scouting:
+    name: Test Scouting & Docker Compose build
+    runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:13
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_DB: scoutingdb
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: tmpPass
+        options: >-
+          --health-cmd="pg_isready"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2  # Récupère le code source
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
+      - name: Checkout source
+        uses: actions/checkout@v3
         with:
-          java-version: '17'
-          distribution: 'adoptium'  # Ulise OpenJDK 17
-
-      - name: Build with Maven
-        run: mvn clean install -DskipTests  # Compile et crée le JAR sans exécuter les tests
-
-      - name: Build Docker images using Docker Compose
-        run: |
-          docker-compose -f docker-compose.yaml build  # Construit les images Docker avec Docker Compose
-
-  test:
-    runs-on: ubuntu-latest  # Utilise un environnement Ubuntu
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2  # Récupère le code source
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'adoptopenjdk'  # Utilise OpenJDK 17
-
-      - name: Run unit tests with Maven
-        run: mvn test  # Exécute les tests unitaires
-
-  deploy:
-    runs-on: ubuntu-latest  # Utilise un environnement Ubuntu
-    needs: [build, test]  # Attends que les jobs build et test réussissent
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2  # Récupère le code source
+          fetch-depth: 0
 
       - name: Set up Docker
-        run: sudo apt-get install docker.io docker-compose  # Installe Docker et Docker Compose si ce n'est pas déjà fait
+        uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}  # Nom d'utilisateur Docker Hub dans les secrets GitHub
-          password: ${{ secrets.DOCKER_PASSWORD }}  # Mot de passe Docker Hub dans les secrets GitHub
-
-      - name: Build and start containers using Docker Compose
+      - name: Install Docker Compose
         run: |
-          docker-compose -f docker-compose.yaml up -d  # Lance les services en arrière-plan
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version  # Vérification de la version installée
 
-      - name: Run integration tests
-        run: mvn verify -DskipTests  # Exécute les tests d'intégration pour vérifier le bon fonctionnement du déploiement
-
-      - name: Push Docker images to Docker Hub
+      - name: Clone Exercice-DDD repository
         run: |
-          docker-compose -f docker-compose.yaml push  # Pousse les images Docker vers Docker Hub
+          git clone https://github.com/AyaELMAFHOUM/Exercice-DDD.git
+          ls -al Exercice-DDD
+          ls -R Exercice-DDD
+
+      - name: Build and start services with Docker Compose
+        run: |
+          cd Exercice-DDD/scouting-service
+          docker-compose -f docker-compose.yaml up --build -d
+
+      - name: Wait for services to be ready
+        run: |
+          sleep 30  # Attendre un peu pour que les services se lancent
+
+      - name: Run SonarQube Analysises
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          cd Exercice-DDD/scouting-service
+          docker exec -t $(docker ps -q -f ancestor=scouting-service) mvn sonar:sonar \
+            -Dsonar.projectKey=scouting-service \
+            -Dsonar.host.url=https://c1b0-197-230-25-154.ngrok-free.app  \
+            -Dsonar.login=$SONAR_TOKEN
+
+      - name: Shutdown Docker Compose services
+        run: |
+          cd Exercice-DDD/scouting-service
+          docker-compose -f docker-compose.yaml down
