--- a/scouting-service/.github/workflows/ci-cd.yml
+++ b/scouting-service/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Java CI with Docker Build and SonarQube
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  test_scouting:
-    name: Test Scouting & Docker Compose build
+  build_and_analyze:
+    name: Build Docker Image, Run Tests & SonarQube Analysis
     runs-on: ubuntu-latest
 
     services:
@@ -27,45 +27,30 @@ jobs:
           --health-retries=5
 
     steps:
-      - name: Checkout source
+      - name: Checkout source code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
-
-      - name: Clone Exercice-DDD repository
-        run: |
-          git clone https://github.com/AyaELMAFHOUM/Exercice-DDD.git
-          ls -al Exercice-DDD
-
-      - name: Build and start services with Docker Compose
+      - name: Build Docker image
         run: |
           cd Exercice-DDD/scouting-service
-          docker-compose -f docker-compose.yaml up --build -d
+          docker build -t scouting-service .
 
-      - name: Wait for services to be ready
-        run: sleep 30
+      - name: Run Maven tests in Docker container
+        run: |
+          cd Exercice-DDD/scouting-service
+          docker run --rm -e POSTGRES_DB=scoutingdb -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=tmpPass -v $(pwd):/usr/src/app -w /usr/src/app maven:3.8-openjdk-17 mvn clean verify
 
-      - name: Debug - List running containers
-        run: docker ps -a
-
-      - name: Run SonarQube Analysis with Maven (local)
-        working-directory: Exercice-DDD/scouting-service
+      - name: Run SonarQube Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          mvn verify sonar:sonar \
+          cd Exercice-DDD/scouting-service
+          docker run --rm -e SONAR_TOKEN=$SONAR_TOKEN -v $(pwd):/usr/src/app -w /usr/src/app maven:3.8-openjdk-17 mvn sonar:sonar \
             -Dsonar.projectKey=scouting-service \
             -Dsonar.host.url=https://c1b0-197-230-25-154.ngrok-free.app \
             -Dsonar.login=$SONAR_TOKEN
