--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Java CI with Docker Build and SonarQube
 
 on:
   push:
@@ -7,15 +7,15 @@ on:
     branches: [ main ]
 
 jobs:
-  test_scouting:
-    name: Test Scouting & Docker Compose build
+  build_and_analyze:
+    name: Build Docker Image, Run Tests & SonarQube Analysis
     runs-on: ubuntu-latest
 
     services:
       postgres:
         image: postgres:13
         ports:
-          - 5432:5432
+          - 5433:5432
         env:
           POSTGRES_DB: scoutingdb
           POSTGRES_USER: postgres
@@ -27,46 +27,55 @@ jobs:
           --health-retries=5
 
     steps:
-      - name: Checkout source
+      - name: Checkout source code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Set up Docker
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Install Docker Compose
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version  # Vérification de la version installée
+          docker-compose --version
 
-      - name: Clone Exercice-DDD repository
-        run: |
-          git clone https://github.com/AyaELMAFHOUM/Exercice-DDD.git
-          ls -al Exercice-DDD
-          ls -R Exercice-DDD
-
-      - name: Build and start services with Docker Compose
+      - name: Build Docker image
         run: |
           cd Exercice-DDD/scouting-service
-          docker-compose -f docker-compose.yaml up --build -d
+          docker build -t scouting-service .
 
-      - name: Wait for services to be ready
+      - name: Run Maven tests in Docker
         run: |
-          sleep 30  # Attendre un peu pour que les services se lancent
+          cd Exercice-DDD/scouting-service
+          docker run --rm \
+            --network host \
+            -e POSTGRES_DB=scoutingdb \
+            -e POSTGRES_USER=postgres \
+            -e POSTGRES_PASSWORD=tmpPass \
+            -v "$(pwd)":/usr/src/app \
+            -w /usr/src/app \
+            maven:3.8.8-eclipse-temurin-21 \
+            mvn clean verify
 
-      - name: Run SonarQube Analysises
+      - name: Run SonarQube Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           cd Exercice-DDD/scouting-service
-          docker exec -t $(docker ps -q -f ancestor=scouting-service) mvn sonar:sonar \
-            -Dsonar.projectKey=scouting-service \
-            -Dsonar.host.url=https://c1b0-197-230-25-154.ngrok-free.app  \
-            -Dsonar.login=$SONAR_TOKEN
+          docker run --rm \
+            --network host \
+            -e SONAR_TOKEN=${{ secrets.SONAR_TOKEN }} \
+            -v "$(pwd)":/usr/src/app \
+            -w /usr/src/app \
+            maven:3.8.8-eclipse-temurin-21 \
+            mvn sonar:sonar \
+              -Dsonar.projectKey=scouting-service \
+              -Dsonar.host.url=https://c1b0-197-230-25-154.ngrok-free.app \
+              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-      - name: Shutdown Docker Compose services
+      - name: Shutdown Docker Compose services (if any)
         run: |
           cd Exercice-DDD/scouting-service
-          docker-compose -f docker-compose.yaml down
+          docker-compose down || true
