--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Debug - Lister les fichiers pour valider le chemin
+        run: ls -R
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -42,13 +45,12 @@ jobs:
           docker-compose --version
 
       - name: Build Docker image
-        run: |
-          cd Exercice-DDD/scouting-service
-          docker build -t scouting-service .
+        working-directory: Exercice-DDD/scouting-service
+        run: docker build -t scouting-service .
 
       - name: Run Maven tests in Docker
+        working-directory: Exercice-DDD/scouting-service
         run: |
-          cd Exercice-DDD/scouting-service
           docker run --rm \
             --network host \
             -e POSTGRES_DB=scoutingdb \
@@ -60,10 +62,10 @@ jobs:
             mvn clean verify
 
       - name: Run SonarQube Analysis
+        working-directory: Exercice-DDD/scouting-service
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          cd Exercice-DDD/scouting-service
           docker run --rm \
             --network host \
             -e SONAR_TOKEN=${{ secrets.SONAR_TOKEN }} \
@@ -76,6 +78,6 @@ jobs:
               -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
       - name: Shutdown Docker Compose services (if any)
-        run: |
-          cd Exercice-DDD/scouting-service
-          docker-compose down || true
+        working-directory: Exercice-DDD/scouting-service
+        run: docker-compose down || true
+
