--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Debug - Lister les fichiers
-        run: ls -R
+      - name: Debug structure des dossiers
+        run: |
+          echo "Chemin courant :"
+          pwd
+          echo "Contenu du dossier courant :"
+          ls -la
+          echo "Contenu de Exercice-DDD :"
+          ls -la Exercice-DDD || echo "❌ Le dossier Exercice-DDD est introuvable"
+          echo "Contenu de Exercice-DDD/scouting-service :"
+          ls -la Exercice-DDD/scouting-service || echo "❌ Le dossier scouting-service est introuvable"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -45,11 +53,11 @@ jobs:
           docker-compose --version
 
       - name: Build Docker image
-        working-directory: ./scouting-service  # Chemin relatif
+        working-directory: Exercice-DDD/scouting-service
         run: docker build -t scouting-service .
 
-      - name: Run Maven tests
-        working-directory: ./scouting-service
+      - name: Run Maven tests in Docker
+        working-directory: Exercice-DDD/scouting-service
         run: |
           docker run --rm \
             --network host \
@@ -62,15 +70,17 @@ jobs:
             mvn clean verify
 
       - name: Run SonarQube Analysis
-        working-directory: ./scouting-service
+        working-directory: Exercice-DDD/scouting-service
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: https://c1b0-197-230-25-154.ngrok-free.app
         run: |
-          mvn sonar:sonar \
-            -Dsonar.projectKey=scouting-service \
-            -Dsonar.host.url=$SONAR_HOST_URL \
-            -Dsonar.login=$SONAR_TOKEN
-
-      - name: Shutdown services
-        run: docker-compose down || true
+          docker run --rm \
+            --network host \
+            -e SONAR_TOKEN=${{ secrets.SONAR_TOKEN }} \
+            -v "$(pwd)":/usr/src/app \
+            -w /usr/src/app \
+            maven:3.8.8-eclipse-temurin-21 \
+            mvn sonar:sonar \
+              -Dsonar.projectKey=scouting-service \
+              -Dsonar.host.url=https://c1b0-197-230-25-154.ngrok-free.app \
+              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
