--- a/scouting-service/.github/workflows/ci-cd.yml
+++ b/scouting-service/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
           --health-retries=5
 
     steps:
-      - name: Checkout source code
+      - name: Checkout pipeline repo
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -41,9 +41,9 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version
 
-      - name: Clone Exercice-DDD repository
+      - name: Clone Imad's repository
         run: |
-          git clone https://github.com/AyaELMAFHOUM/Exercice-DDD.git
+          git clone https://github.com/imadovetch/Exercice-DDD.git
           ls -al Exercice-DDD
 
       - name: Build Docker image
@@ -83,4 +83,3 @@ jobs:
         run: |
           cd Exercice-DDD/scouting-service
           docker-compose -f docker-compose.yaml down || true
-
