--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -1,4 +1,4 @@
-name: Java CI with Docker Build SonarQube and trivy 
+name: Java CI with Docker and SonarQube
 
 on:
   push:
@@ -7,19 +7,18 @@ on:
     branches: [ main ]
 
 jobs:
-  build_and_analyze:
-    name: Build Docker Image, Run Tests & SonarQube Analysis
+  build_and_test:
     runs-on: ubuntu-latest
 
     services:
       postgres:
         image: postgres:13
-        ports:
-          - 5433:5432
         env:
           POSTGRES_DB: scoutingdb
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: tmpPass
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd="pg_isready"
           --health-interval=10s
@@ -27,55 +26,61 @@ jobs:
           --health-retries=5
 
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Show working directory
+        run: ls -la
 
-      - name: Install Docker Compose
+      - name: Build project with Maven (tests included)
+        working-directory: scouting-service
         run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
-
-      - name: Build Docker image
-        run: |
-          cd Exercice-DDD/scouting-service
-          docker build -t scouting-service .
-
-      - name: Start Maven container in background
-        run: |
-          cd Exercice-DDD/scouting-service
-          docker run -dit \
-            --name mvn \
+          docker run --rm \
+            --network host \
             -e POSTGRES_DB=scoutingdb \
             -e POSTGRES_USER=postgres \
             -e POSTGRES_PASSWORD=tmpPass \
-            -v $(pwd):/usr/src/app \
-            -w /usr/src/app \
-            maven:3.8-openjdk-17 tail -f /dev/null
+            -v "$PWD":/app \
+            -w /app \
+            maven:3.8.8-eclipse-temurin-21 \
+            mvn clean verify
 
-      - name: Run Maven tests in container
-        run: |
-          docker exec mvn mvn clean verify
-
-      - name: Run SonarQube Analysis
+      - name: SonarQube Analysis
+        working-directory: scouting-service
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          docker exec mvn mvn sonar:sonar \
-            -Dsonar.projectKey=scouting-service \
-            -Dsonar.host.url=https://c1b0-197-230-25-154.ngrok-free.app \
-            -Dsonar.login=$SONAR_TOKEN
+          docker run --rm \
+            --network host \
+            -e SONAR_TOKEN=${{ secrets.SONAR_TOKEN }} \
+            -v "$PWD":/app \
+            -w /app \
+            maven:3.8.8-eclipse-temurin-21 \
+            mvn sonar:sonar \
+              -Dsonar.projectKey=scouting-service \
+              -Dsonar.host.url=https://c1b0-197-230-25-154.ngrok-free.app \
+              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-      - name: Stop Maven container
-        run: docker rm -f mvn || true
+      # ✅ Scan codebase avec Trivy
+      - name: Trivy scan - codebase
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          format: 'table'
+          ignore-unfixed: true
+          exit-code: '0'
+          severity: 'CRITICAL,HIGH'
 
-      - name: Shutdown Docker Compose services
-        run: |
-          cd Exercice-DDD/scouting-service
-          docker-compose -f docker-compose.yaml down || true
+      # 🐳 Build Docker image
+      - name: Build Docker image
+        run: docker build -t scouting-app:latest .
 
+      # 🔍 Trivy scan - image Docker
+      - name: Trivy scan - Docker image
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'scouting-app:latest'
+          format: 'table'
+          ignore-unfixed: true
+          exit-code: '0'
+          severity: 'CRITICAL,HIGH'
