--- a/scouting-service/dockerfile
+++ b/scouting-service/dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.9.6-eclipse-temurin-17 as builder
 WORKDIR /app
 COPY . /app
-RUN mvn dependency:go-offline && mvn clean package 
+RUN mvn dependency:go-offline && mvn clean package -DskipTests
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 COPY --from=builder /app/target/scouting-service-0.0.1-SNAPSHOT.jar app.jar
