--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -45,7 +45,7 @@ jobs:
             maven:3.8.8-eclipse-temurin-21 \
             mvn clean verify
 
-      # ✅ Scan codebase avec Trivy
+      
       - name: Trivy scan - codebase
         uses: aquasecurity/trivy-action@master
         with:
@@ -55,11 +55,11 @@ jobs:
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
 
-      # 🐳 Build Docker image
+      
       - name: Build Docker image
-        run: docker build -t scouting-app:latest -f scouting-service/dockerfile scouting-service
+        run: |
+          docker build -t scouting-app:latest -f scouting-service/dockerfile scouting-service
 
-      # 🔍 Trivy scan - image Docker
       - name: Trivy scan - Docker image
         uses: aquasecurity/trivy-action@master
         with:
@@ -68,3 +68,19 @@ jobs:
           ignore-unfixed: true
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
+
+
+      - name: Docker login
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      
+      - name: Tag and push image to Docker Hub
+        env:
+          IMAGE_NAME: scouting-app
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        run: |
+          DATE_TAG=$(date +'%Y-%m-%d-%H%M')
+          docker tag $IMAGE_NAME:latest $DOCKERHUB_USERNAME/$IMAGE_NAME:$DATE_TAG
+          docker tag $IMAGE_NAME:latest $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
+          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:$DATE_TAG
+          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
