--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -1,4 +1,4 @@
-name: Java CI with Docker and SonarQube
+name: CI/CD pipline
 
 on:
   push:
@@ -45,7 +45,23 @@ jobs:
             maven:3.8.8-eclipse-temurin-21 \
             mvn clean verify
 
-      
+      - name: SonarQube Scan
+        working-directory: scouting-service
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          docker run --rm \
+            --network host \
+            -e SONAR_HOST_URL=" https://f9ba-105-66-132-136.ngrok-free.app" \
+            -v "$PWD":/usr/src \
+            sonarsource/sonar-scanner-cli \
+            sonar-scanner \
+              -Dsonar.projectKey=scouting-service \
+              -Dsonar.sources=. \
+              -Dsonar.java.binaries=target \
+              -Dsonar.host.url= https://f9ba-105-66-132-136.ngrok-free.app \
+              -Dsonar.login=$SONAR_TOKEN
+
       - name: Trivy scan - codebase
         uses: aquasecurity/trivy-action@master
         with:
@@ -55,7 +71,6 @@ jobs:
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
 
-      
       - name: Build Docker image
         run: |
           docker build -t scouting-app:latest -f scouting-service/dockerfile scouting-service
@@ -69,11 +84,9 @@ jobs:
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
 
-
       - name: Docker login
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      
       - name: Tag and push image to Docker Hub
         env:
           IMAGE_NAME: scouting-app
