--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -1,4 +1,4 @@
-name: CI/CD pipline
+name: CI/CD Pipeline - Java, SonarQube, DockerHub
 
 on:
   push:
@@ -51,15 +51,14 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           docker run --rm \
-            --network host \
-            -e SONAR_HOST_URL=" https://f9ba-105-66-132-136.ngrok-free.app" \
+            -e SONAR_HOST_URL="https://f9ba-105-66-132-136.ngrok-free.app" \
             -v "$PWD":/usr/src \
             sonarsource/sonar-scanner-cli \
             sonar-scanner \
               -Dsonar.projectKey=scouting-service \
               -Dsonar.sources=. \
               -Dsonar.java.binaries=target \
-              -Dsonar.host.url= https://f9ba-105-66-132-136.ngrok-free.app \
+              -Dsonar.host.url=https://f9ba-105-66-132-136.ngrok-free.app \
               -Dsonar.login=$SONAR_TOKEN
 
       - name: Trivy scan - codebase
