--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -1,4 +1,5 @@
-name: Pipline CI/CD 
+name: Java CI/CD with Docker and SonarQube
+
 on:
   push:
     branches: [ main ]
@@ -44,6 +45,22 @@ jobs:
             maven:3.8.8-eclipse-temurin-21 \
             mvn clean verify
 
+      - name: SonarQube Analysis
+        working-directory: scouting-service
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          docker run --rm \
+            --network host \
+            -e SONAR_TOKEN=${{ secrets.SONAR_TOKEN }} \
+            -v "$PWD":/app \
+            -w /app \
+            maven:3.8.8-eclipse-temurin-21 \
+            mvn sonar:sonar \
+              -Dsonar.projectKey=scouting-service \
+              -Dsonar.host.url=https://9ada-105-66-132-136.ngrok-free.app \
+              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
       - name: Trivy scan - codebase
         uses: aquasecurity/trivy-action@master
         with:
@@ -79,19 +96,3 @@ jobs:
           docker tag $IMAGE_NAME:latest $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:$DATE_TAG
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
-
-      - name: SonarQube Analysis
-        working-directory: scouting-service
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          docker run --rm \
-            --network host \
-            -e SONAR_TOKEN=${{ secrets.SONAR_TOKEN }} \
-            -v "$PWD":/app \
-            -w /app \
-            maven:3.8.8-eclipse-temurin-21 \
-            mvn sonar:sonar \
-              -Dsonar.projectKey=scouting-service \
-              -Dsonar.host.url=https://f053-105-67-131-237.ngrok-free.app \
-              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
